clone/mdn/main.css
* {
  box-sizing: border-box;
}

body {
  margin: 0;
  overflow-y: auto;
}

table,
th,
td {
  border: 1px solid #c3c7cb;
  border-collapse: collapse;
  padding: 8px 12px;
}

tr:nth-child(even) {
  background-color: #f7f7f8;
}

/*패딩 제거*/
.no-padding {
  padding: 0;
}

.fixed-header {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
}

.main-top-navigator {
  display: grid;
  justify-content: space-between;
  align-items: center;
  padding: 12px 16px;
  background-color: #fff;
}

.header-logo img {
  height: 36px;
  padding: 5px;
}

.horizontal-list {
  margin: 0;
  padding: 0;
  font-size: 0;
  list-style-type: none;
}

.top-width {
  padding: 0 40px;
}

.vertical-list {
  margin: 0;
  padding: 0;
  font-size: 0;
  list-style-type: none;
  display: grid;
}

.horizontal-item {
  display: inline-block;
  font-size: 16px;
  vertical-align: middle;
  padding: 8px 11px;
}

.top-hover > a {
  color: black;
  text-decoration: none;
}

.top-hover:hover {
  background-color: #ecf4fe;
}
.orange:hover {
  background-color: #fef3eb;
}

.purple:hover {
  background-color: #f7f0ff;
}

.green:hover {
  background-color: #eaf6ef;
}

.main-top-navigator,
.breadcrumbs-bar {
  display: flex;
  flex-wrap: nowrap;
  justify-content: space-between;
  align-items: center;
  position: relative;
}

.breadcrumbs-bar {
  height: 32px;
  background-color: #f7f7f8;
  border-top: 1px solid #51565d;
  border-bottom: 1px solid #51565d;
}

.breadcrumbs-bar > div > ul {
  align-items: center;
  display: flex;
  justify-content: end;
  list-style: none;
  margin: 0 auto 0 0;
  min-width: 0;
  overflow-x: hidden;
  padding: 2px;
}

.breadcrumbs-bar > div > .horizontal-list > li {
  display: flex;
  place-items: center;
}

.breadcrumbs-bar > div > .horizontal-list > .horizontal-item {
  font-size: 16px;
  padding: 5px 10px;
}
.breadcrumbs-bar > div > .horizontal-list > .horizontal-item > a {
  color: black;
  text-decoration: none;
}

.breadcrumbs-bar > .left > .horizontal-list > .horizontal-item > a:hover {
  color: black;
  text-decoration: underline;
}

.breadcrumbs-bar
  > .left
  > .horizontal-list
  > .horizontal-item:not(.horizontal-item:last-child):after {
  content: url("https://developer.mozilla.org/static/client/chevron-right.a81fc439dd5e4839.svg");
  width: 20px;
  height: 20px;
  vertical-align: middle;
}

.after-v::after {
  content: url("https://developer.mozilla.org/static/client/chevron-down.7c923b7054da305b.svg");
}

.underline {
  text-decoration: underline;
}

.hover-gray:hover {
  background-color: #edeef0;
}

.contents {
  display: flex;
  margin-top: 101px;
  width: 100%;
}

.contents > .left-contents,
.contents > .right-contents {
  width: 256px;
  flex-shrink: 0;
  position: sticky;
  top: 101px;
  height: calc(100vh - 101px);
  overflow-y: auto;
  padding: 16px;
  align-self: flex-start;
}

.contents > .main-contents {
  flex: 1;
  padding: 0 30px 50px 30px;
  min-width: 0;
}

.contents > div > .vertical-list {
  font-size: 16px;
  display: inline-block;
  padding-block: 4px;
  list-style: none;
  margin: 0;
  padding: 0;
}

.contents > .left-contents > .vertical-list > li {
  margin-bottom: 16px;
  margin-top: 8px;
}

.contents > .left-contents > .vertical-list > li > a {
  color: black;
  text-decoration: none;
  padding-block: 4px;
  vertical-align: middle;
}

.contents > .left-contents > .vertical-list > .bold {
  font-weight: 700;
  margin-top: 16px;
  margin-bottom: 8px;
}

.contents > .left-contents > .vertical-list > li > a:hover {
  text-decoration: underline;
  color: #044c9f;
}

.left-padding {
  padding-left: 16px;
}

.filter {
  display: flex;
  align-items: center;
  border: 1px solid #51565d;
  border-radius: 24px;
  padding: 4px 12px;
  margin: 8px 8px 32px 0;
}

.filter:focus-within {
  border-color: #000;
  box-shadow: 0 0 0 1px #000;
}

.filter-svg {
  content: url("https://developer.mozilla.org/static/ssr/filter.b77a4ccbfb57e2ef.svg");
  width: 18px;
  height: 18px;
}

.filter-input {
  border: none;
  outline: none;
  font-size: 15px;
  height: 25px;
  width: 100px;
  margin: 0;
}

.only-in-en-us:after {
  content: "(영어)";
  font-size: 0.7rem;
  margin-left: 0.5ch;
  vertical-align: super;
  display: inline-block;
  text-decoration: none;
}

.clicked {
  border-left: 2px solid #0a5dbd;
  background-color: #ecf4fe;
  align-items: center;
  padding: 0 8px;
}

.gts:before {
  content: url("https://developer.mozilla.org/static/client/chevron-right.a81fc439dd5e4839.svg");
  width: 20px;
  height: 20px;
  vertical-align: middle;
}

.right-contents > .vertical-list > li > a:not(.clicked) {
  color: black;
  text-decoration: none;
  border-left: 2px solid #00000040;
  padding: 4px 8px;
  display: inline-block;
}

.right-contents > .vertical-list > li > a:hover {
  text-decoration: underline;
  color: #044c9f;
}

.right-contents > .vertical-list > li > .clicked {
  color: black;
  text-decoration: none;
  padding: 4px 8px;
  display: inline-block;
}

.right-contents > .vertical-list > li > .clicked:hover {
  text-decoration: underline;
  color: black;
}

.main-contents > div > a {
  color: #0a5dbd;
}

table a {
  color: #0a5dbd;
}

h1 {
  font-weight: 400;
  font-size: 2.5rem;
  margin: 16px 0;
}

h2 {
  font-size: 2rem;
  font-weight: 400;
  margin-top: 16px;
  margin-bottom: 0;
}

.right-contents h2 {
  font-size: 1.5rem;
  padding: 0;
}

th {
  text-align: left;
  font-weight: 600;
}

.text {
  margin: 16px 0;
  line-height: 1.75;
}

.navigation_search,
.login {
  display: inline-block;
}

.mdn-search-button {
  align-items: center;
  background-color: #fff;
  border: 1px solid #c3c7cb;
  border-radius: 24px;
  color: #000;
  cursor: pointer;
  display: flex;
  justify-content: space-between;
  margin: 0;
  padding: 0.25rem 0.25rem 0.25rem 0.75rem;
  width: 5rem;
}

.mdn-search-button::before {
  content: "_";
  height: 18px;
  width: 15px;
}

h2 > a {
  color: black;
  text-decoration: none;
}

h2 > a:hover {
  text-decoration: underline;
}

h2 > a:hover::before {
  padding-left: -16px;
  content: "#";
}

